--- a/google/cloud/automl/v1beta1/automl_gapic.yaml
+++ b/google/cloud/automl/v1beta1/automl_gapic.yaml
@@ -1,6 +1,5 @@
 type: com.google.api.codegen.ConfigProto
 config_schema_version: 1.0.0
-# The settings of generated code in a specific language.
 language_settings:
   java:
     package_name: com.google.cloud.automl.v1beta1
@@ -17,24 +16,11 @@ language_settings:
   nodejs:
     package_name: automl.v1beta1
     domain_layer_location: google-cloud
-# A list of API interface configurations.
 interfaces:
-  # The fully qualified name of the API interface.
 - name: google.cloud.automl.v1beta1.PredictionService
-  # A list of resource collection configurations.
-  # Consists of a name_pattern and an entity_name.
-  # The name_pattern is a pattern to describe the names of the resources of this
-  # collection, using the platform's conventions for URI patterns. A generator
-  # may use this to generate methods to compose and decompose such names. The
-  # pattern should use named placeholders as in `shelves/{shelf}/books/{book}`;
-  # those will be taken as hints for the parameter names of the generated
-  # methods. If empty, no name methods are generated.
-  # The entity_name is the name to be used as a basis for generated methods and
-  # classes.
   collections:
   - name_pattern: projects/{project}/locations/{location}/models/{model}
     entity_name: model
-  # Definition for retryable codes.
   retry_codes_def:
   - name: idempotent
     retry_codes:
@@ -42,7 +28,6 @@ interfaces:
     - DEADLINE_EXCEEDED
   - name: non_idempotent
     retry_codes: []
-  # Definition for retry/backoff parameters.
   retry_params_def:
   - name: default
     initial_retry_delay_millis: 100
@@ -52,60 +37,6 @@ interfaces:
     rpc_timeout_multiplier: 1
     max_rpc_timeout_millis: 60000
     total_timeout_millis: 600000
-  # A list of method configurations.
-  # Common properties:
-  #
-  #   name - The simple name of the method.
-  #
-  #   flattening - Specifies the configuration for parameter flattening.
-  #   Describes the parameter groups for which a generator should produce method
-  #   overloads which allow a client to directly pass request message fields as
-  #   method parameters. This information may or may not be used, depending on
-  #   the target language.
-  #   Consists of groups, which each represent a list of parameters to be
-  #   flattened. Each parameter listed must be a field of the request message.
-  #
-  #   required_fields - Fields that are always required for a request to be
-  #   valid.
-  #
-  #   resource_name_treatment - An enum that specifies how to treat the resource
-  #   name formats defined in the field_name_patterns and
-  #   response_field_name_patterns fields.
-  #   UNSET: default value
-  #   NONE: the collection configs will not be used by the generated code.
-  #   VALIDATE: string fields will be validated by the client against the
-  #   specified resource name formats.
-  #   STATIC_TYPES: the client will use generated types for resource names.
-  #
-  #   page_streaming - Specifies the configuration for paging.
-  #   Describes information for generating a method which transforms a paging
-  #   list RPC into a stream of resources.
-  #   Consists of a request and a response.
-  #   The request specifies request information of the list method. It defines
-  #   which fields match the paging pattern in the request. The request consists
-  #   of a page_size_field and a token_field. The page_size_field is the name of
-  #   the optional field specifying the maximum number of elements to be
-  #   returned in the response. The token_field is the name of the field in the
-  #   request containing the page token.
-  #   The response specifies response information of the list method. It defines
-  #   which fields match the paging pattern in the response. The response
-  #   consists of a token_field and a resources_field. The token_field is the
-  #   name of the field in the response containing the next page token. The
-  #   resources_field is the name of the field in the response containing the
-  #   list of resources belonging to the page.
-  #
-  #   retry_codes_name - Specifies the configuration for retryable codes. The
-  #   name must be defined in interfaces.retry_codes_def.
-  #
-  #   retry_params_name - Specifies the configuration for retry/backoff
-  #   parameters. The name must be defined in interfaces.retry_params_def.
-  #
-  #   field_name_patterns - Maps the field name of the request type to
-  #   entity_name of interfaces.collections.
-  #   Specifies the string pattern that the field must follow.
-  #
-  #   timeout_millis - Specifies the default timeout for a non-retrying call. If
-  #   the call is retrying, refer to retry_params_name instead.
   methods:
   - name: Predict
     flattening:
@@ -147,18 +78,7 @@ interfaces:
       max_poll_delay_millis: 5000
       total_poll_timeout_millis: 300000
     timeout_millis: 20000
-  # The fully qualified name of the API interface.
 - name: google.cloud.automl.v1beta1.AutoMl
-  # A list of resource collection configurations.
-  # Consists of a name_pattern and an entity_name.
-  # The name_pattern is a pattern to describe the names of the resources of this
-  # collection, using the platform's conventions for URI patterns. A generator
-  # may use this to generate methods to compose and decompose such names. The
-  # pattern should use named placeholders as in `shelves/{shelf}/books/{book}`;
-  # those will be taken as hints for the parameter names of the generated
-  # methods. If empty, no name methods are generated.
-  # The entity_name is the name to be used as a basis for generated methods and
-  # classes.
   collections:
   - name_pattern: projects/{project}/locations/{location}
     entity_name: location
@@ -174,7 +94,6 @@ interfaces:
     entity_name: table_spec
   - name_pattern: projects/{project}/locations/{location}/datasets/{dataset}/tableSpecs/{table_spec}/columnSpecs/{column_spec}
     entity_name: column_spec
-  # Definition for retryable codes.
   retry_codes_def:
   - name: idempotent
     retry_codes:
@@ -182,7 +101,6 @@ interfaces:
     - DEADLINE_EXCEEDED
   - name: non_idempotent
     retry_codes: []
-  # Definition for retry/backoff parameters.
   retry_params_def:
   - name: default
     initial_retry_delay_millis: 100
@@ -192,60 +110,6 @@ interfaces:
     rpc_timeout_multiplier: 1
     max_rpc_timeout_millis: 20000
     total_timeout_millis: 600000
-  # A list of method configurations.
-  # Common properties:
-  #
-  #   name - The simple name of the method.
-  #
-  #   flattening - Specifies the configuration for parameter flattening.
-  #   Describes the parameter groups for which a generator should produce method
-  #   overloads which allow a client to directly pass request message fields as
-  #   method parameters. This information may or may not be used, depending on
-  #   the target language.
-  #   Consists of groups, which each represent a list of parameters to be
-  #   flattened. Each parameter listed must be a field of the request message.
-  #
-  #   required_fields - Fields that are always required for a request to be
-  #   valid.
-  #
-  #   resource_name_treatment - An enum that specifies how to treat the resource
-  #   name formats defined in the field_name_patterns and
-  #   response_field_name_patterns fields.
-  #   UNSET: default value
-  #   NONE: the collection configs will not be used by the generated code.
-  #   VALIDATE: string fields will be validated by the client against the
-  #   specified resource name formats.
-  #   STATIC_TYPES: the client will use generated types for resource names.
-  #
-  #   page_streaming - Specifies the configuration for paging.
-  #   Describes information for generating a method which transforms a paging
-  #   list RPC into a stream of resources.
-  #   Consists of a request and a response.
-  #   The request specifies request information of the list method. It defines
-  #   which fields match the paging pattern in the request. The request consists
-  #   of a page_size_field and a token_field. The page_size_field is the name of
-  #   the optional field specifying the maximum number of elements to be
-  #   returned in the response. The token_field is the name of the field in the
-  #   request containing the page token.
-  #   The response specifies response information of the list method. It defines
-  #   which fields match the paging pattern in the response. The response
-  #   consists of a token_field and a resources_field. The token_field is the
-  #   name of the field in the response containing the next page token. The
-  #   resources_field is the name of the field in the response containing the
-  #   list of resources belonging to the page.
-  #
-  #   retry_codes_name - Specifies the configuration for retryable codes. The
-  #   name must be defined in interfaces.retry_codes_def.
-  #
-  #   retry_params_name - Specifies the configuration for retry/backoff
-  #   parameters. The name must be defined in interfaces.retry_params_def.
-  #
-  #   field_name_patterns - Maps the field name of the request type to
-  #   entity_name of interfaces.collections.
-  #   Specifies the string pattern that the field must follow.
-  #
-  #   timeout_millis - Specifies the default timeout for a non-retrying call. If
-  #   the call is retrying, refer to retry_params_name instead.
   methods:
   - name: CreateDataset
     flattening:
@@ -262,6 +126,53 @@ interfaces:
       parent: location
     resource_name_treatment: STATIC_TYPES
     timeout_millis: 5000
+    samples:
+      standalone:
+      - region_tag: automl_video_object_tracking_create_dataset
+        value_sets:
+        - automl_video_object_tracking_create_dataset
+    sample_value_sets:
+    - title: Create Dataset
+      description: Create Dataset
+      id: automl_video_object_tracking_create_dataset
+      on_success:
+      - print:
+        - Created Dataset.
+      - define: dataset = $resp
+      - print:
+        - 'Name: %s'
+        - dataset.name
+      - print:
+        - 'Display Name: %s'
+        - dataset.display_name
+      - print:
+        - 'Description: %s'
+        - dataset.description
+      parameters:
+        defaults:
+        - dataset.display_name = "Display_Name_123"
+        - dataset.description = "Description of this dataset"
+        - parent%project = "[Google Cloud Project ID]"
+        - parent%location = "us-central1"
+        - dataset.video_object_tracking_dataset_metadata = {}
+        attributes:
+        - parameter: dataset.display_name
+          description: |
+            The name of the dataset to show in the interface.
+            The name can be up to 32 characters long and can consist only of
+            ASCII Latin letters A-Z and a-z, underscores (_), and ASCII digits 0-9.
+            Must be unique within the scope of the provided GCP Project and Location.
+          sample_argument_name: display_name
+        - parameter: dataset.description
+          description: User-provided description of dataset (optional)
+        - parameter: parent%project
+          description: Required. Your Google Cloud Project ID.
+          sample_argument_name: project
+        - parameter: parent%location
+        - parameter: dataset.video_object_tracking_dataset_metadata
+          description: |
+            Initialized video_object_tracking_dataset_metadata field must be provided.
+            This specifies this Dataset is to be used for video object tracking.
   - name: UpdateDataset
     flattening:
       groups:
@@ -287,6 +198,39 @@ interfaces:
       name: dataset
     resource_name_treatment: STATIC_TYPES
     timeout_millis: 5000
+    samples:
+      standalone:
+      - region_tag: automl_video_object_tracking_get_dataset
+        value_sets:
+        - automl_video_object_tracking_get_dataset
+    sample_value_sets:
+    - title: Get Dataset
+      description: Get Dataset
+      id: automl_video_object_tracking_get_dataset
+      on_success:
+      - define: dataset = $resp
+      - print:
+        - 'Name: %s'
+        - dataset.name
+      - print:
+        - 'Display Name: %s'
+        - dataset.display_name
+      - print:
+        - 'Description: %s'
+        - dataset.description
+      parameters:
+        defaults:
+        - name%dataset = "[Dataset ID]"
+        - name%project = "[Google Cloud Project ID]"
+        - name%location = "us-central1"
+        attributes:
+        - parameter: name%dataset
+          sample_argument_name: dataset_id
+        - parameter: name%project
+          description: Required. Your Google Cloud Project ID.
+          sample_argument_name: project
+        - parameter: name%location
+          description: Compute Region, e.g. us-central1
   - name: ListDatasets
     flattening:
       groups:
@@ -307,6 +251,40 @@ interfaces:
       parent: location
     resource_name_treatment: STATIC_TYPES
     timeout_millis: 5000
+    samples:
+      standalone:
+      - region_tag: automl_video_object_tracking_list_datasets
+        value_sets:
+        - automl_video_object_tracking_list_datasets
+    sample_value_sets:
+    - title: List Datasets
+      description: List Datasets
+      id: automl_video_object_tracking_list_datasets
+      on_success:
+      - define: dataset = $resp
+      - print:
+        - 'Name: %s'
+        - dataset.name
+      - print:
+        - 'Display Name: %s'
+        - dataset.display_name
+      - print:
+        - 'Description: %s'
+        - dataset.description
+      parameters:
+        defaults:
+        - filter = "video_object_tracking_dataset_metadata:*"
+        - parent%project = "[Google Cloud Project ID]"
+        - parent%location = "us-central1"
+        attributes:
+        - parameter: filter
+          description: |
+            An expression for filtering the results of the request.
+            This filters for Datasets which have video_object_tracking_dataset_metadata.
+        - parameter: parent%project
+          description: Required. Your Google Cloud Project ID.
+          sample_argument_name: project
+        - parameter: parent%location
   - name: DeleteDataset
     flattening:
       groups:
@@ -327,6 +305,31 @@ interfaces:
       poll_delay_multiplier: 1.5
       max_poll_delay_millis: 5000
       total_poll_timeout_millis: 300000
+    samples:
+      standalone:
+      - region_tag: automl_video_object_tracking_delete_dataset
+        value_sets:
+        - automl_video_object_tracking_delete_dataset
+    sample_value_sets:
+    - title: Delete Dataset
+      description: Delete Dataset
+      id: automl_video_object_tracking_delete_dataset
+      on_success:
+      - print:
+        - Deleted Dataset.
+      parameters:
+        defaults:
+        - name%dataset = "[Dataset ID]"
+        - name%project = "[Google Cloud Project ID]"
+        - name%location = "us-central1"
+        attributes:
+        - parameter: name%dataset
+          sample_argument_name: dataset_id
+        - parameter: name%project
+          description: Required. Your Google Cloud Project ID.
+          sample_argument_name: project
+        - parameter: name%location
+          description: Compute Region, e.g. us-central1
   - name: ImportData
     flattening:
       groups:
@@ -349,6 +352,38 @@ interfaces:
       poll_delay_multiplier: 1.5
       max_poll_delay_millis: 5000
       total_poll_timeout_millis: 300000
+    samples:
+      standalone:
+      - region_tag: automl_video_object_tracking_import_data
+        value_sets:
+        - automl_video_object_tracking_import_data
+    sample_value_sets:
+    - title: " Import Data"
+      description: " Import Data"
+      id: automl_video_object_tracking_import_data
+      on_success:
+      - print:
+        - Imported data.
+      parameters:
+        defaults:
+        - name%dataset = "[Dataset ID]"
+        - input_config.gcs_source.input_uris[0] = "gs://automl-video-datasets/youtube_8m_videos_animal_tiny.csv"
+        - name%project = "[Google Cloud Project ID]"
+        - name%location = "us-central1"
+        attributes:
+        - parameter: name%dataset
+          description: Identifier of the dataset into which to import data.
+          sample_argument_name: dataset_id
+        - parameter: input_config.gcs_source.input_uris[0]
+          description: |
+            Path to .csv defining data to import.
+            See "Preparing your training data" for more information
+            https://cloud.google.com/video-intelligence/automl/object-tracking/docs/prepare
+        - parameter: name%project
+          description: Required. Your Google Cloud Project ID.
+          sample_argument_name: project
+        - parameter: name%location
+          description: Compute Region, e.g. us-central1
   - name: ExportData
     flattening:
       groups:
