--- a/google/cloud/automl/v1beta1/samples/_templates/managing_datasets/_samples.yaml
+++ b/google/cloud/automl/v1beta1/samples/_templates/managing_datasets/_samples.yaml
@@ -24,10 +24,10 @@ templates:
 # Print Dataset Information
 - name: Print Dataset Information
   response:
-  - print: ["Name: %s", dataset.name]
-  - print: ["Display Name: %s", dataset.display_name]
-  - print: ["Description: %s", dataset.description]
-  - yield: dataset
+  - print: ["Name: %s", dataset_resp.name]
+  - print: ["Display Name: %s", dataset_resp.display_name]
+  - print: ["Description: %s", dataset_resp.description]
+  - yield: dataset_resp
 
 # Create
 - name:  AutoML Create Dataset
@@ -51,7 +51,7 @@ templates:
     comment: "User-provided description of dataset (optional)"
   response:
   - print: "Created Dataset."
-  - define: dataset = $resp
+  - define: dataset_resp = $resp
   - include: Print Dataset Information
 
 # List
@@ -68,7 +68,7 @@ templates:
   #   value: "*"
   #   comment: An expression for filtering the results of the request.
   response:
-  - define: dataset = $resp
+  - define: dataset_resp = $resp
   - include: Print Dataset Information
 
 # Get
@@ -80,7 +80,7 @@ templates:
   mixins:
   - Full Dataset Name (request)
   response:
-  - define: dataset = $resp
+  - define: dataset_resp = $resp
   - include: Print Dataset Information
 
 # Update
@@ -97,7 +97,7 @@ templates:
     input_parameter: description
   response:
   - print: "Updated Dataset."
-  - define: dataset = $resp
+  - define: dataset_resp = $resp
   - include: Print Dataset Information
 
 # Delete
